<resources>
    <string name="app_name">PurepechApp</string>
    <string name="strBotonIngresar">Iniciar Sesion</string>
    <string name="strBotonCrear">Crear Cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="contrase_aLog">Contraseña</string>
    <string name="contrase_aReg">Contraseña (Al menos 6 dígitos)</string>
    <string name="txt_eslogan">Aprendiendo la lengua Purépecha</string>
    <string name="start_main">Empezar a aprender</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrate">Regístrate</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="iniciar_actividad">Selecciona el campo que desees aprender</string>
    <string name="txt_InicioConjunto">Selecciona un conjunto</string>
    <string name="txt_NumeroConjuntos">Campos a aprender</string>
    <string name="txt_cardAnimales">Animales</string>
    <string name="desc">imagen</string>
    <string name="perfil">Perfil</string>
    <string name="txt_cardCampo">Campo</string>
    <string name="txt_cardCuerpo">Partes del cuerpo</string>
    <string name="txt_cardNumeros">Números</string>
    <string name="txt_cardVerbos">Verbos</string>
    <string name="txt_cardFrutas">Frutas, verduras y semillas</string>
    <string name="conjunto_a_reforzar">Conjunto a reforzar</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="animales">Animales</string>
    <string name="campo">Campo</string>
    <string name="general">General</string>
</resources>
