<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pureuno"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/PurepechApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#4E4040"
            android:textSize="50sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtCorreoLog"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimaryDark"
            />


        <EditText
            android:id="@+id/edtContraseñaLog"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/contrase_aLog"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimaryDark"
            />

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/iniciar_sesion"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="@drawable/background_botones"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/registrarse"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="@drawable/background_botones"
            android:textColor="@color/colorAccent"
            />



    </LinearLayout>



</RelativeLayout>