<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_uno"
    tools:context=".PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/PurepechApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/perfil"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUsuarioPerfil"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text=""
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Llevas"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtPuntosPerfil"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text=""
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="puntos"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/cerrar_sesion"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>